# aoc2021

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: util.rs
