[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"
authors = ["Petre Eftime <petre.eftime@gmail.com>"]
rust-version = "1.56"
readme = "README.md"
repository = "https://github.com/petreeftime/aoc2021/"
license-file = "LICENSE"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
